--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.10",
+    "axios": "^1.7.8",
+    "date-fns": "^4.1.0",
     "hls.js": "^1.5.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-multi-carousel": "^2.8.5",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.28.0",
     "swiper": "^11.1.15"
   },
